gccida/c3/replace_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/replace_rtx/src/rtlanal.c:2915:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/replace_rtx/src/rtlanal.c:2917:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/replace_rtx/src/rtlanal.c:2968:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/replace_rtx/src/rtlanal.c:2970:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/replace_rtx/src/obj/rtlanal.o] Error 1
